tests/tooling/fixtures/native/execution/negative/modulo_assign_bool_rhs.objc3
module ModuloAssignBoolRhs;

fn main() -> i32 {
  let x = 5;
  let flag = true;
  x %= flag;
  return x;
}